--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "langchain-community>=0.3.30",
     "langchain-openai>=1.0.0a2",
     "langgraph>=1.0.0a4",
+    "langgraph-cli[inmem]>=0.4.2",
     "langgraph-supervisor>=0.0.28",
     "yfinance>=0.2.66",
 ]
